--- a/index.html
+++ b/index.html
@@ -3,4 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>insert title here</title>
 </head>
+  <body>
+    Wipro Technologies
+  </body>
 </html>
